# tbi-calculator

./: .coveragerc  .pre-commit-config.yaml  README.md  config.ini  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
scripts/: build.bat  setup-environment.bat
tbi_calculator/: __main__.py  api.py  app.py  config.py  model.py  view.py
tbi_calculator/controller/: base.py  controller.py
tbi_calculator/model/: __init__.py  base.py  datastructures.py  model.py
tbi_calculator/view/: __init__.py  base.py  tkinter.py  tkview.py
tests/: conftest.py  fake.py  tbi_example_data.json  test_controller.py  test_data.py  test_datastructures.py  test_model.py
