[tool.poetry]
name = "tbi-calculator"
version = "0.1.0"
description = ""
authors = ["AlexRobinsonDATL <alexander.robinson@dunlopatl.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8, <3.10"
metabase = "~1.4"
smartsheet-python-sdk = "^2.105.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
pytest = "6.2.3"
mypy = "^0.812"
black = "20.8b1"
pytest-cov = "^2.11.1"
isort = "^5.8.0"
flake8-bugbear = "^21.4.3"
pep8-naming = "^0.11.1"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.4.0"
flake8-spellcheck = "^0.23.0"
pre-commit = "^2.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
